--- a/Medium/dateTime/date.html
+++ b/Medium/dateTime/date.html
@@ -9,7 +9,7 @@
     <p id="demo"></p>
 
     <script>
-        // Write code here.
+        const d = new Date();
         document.getElementById("demo").innerHTML = d;
     </script>
 
